--- a/studious_adventure.html
+++ b/studious_adventure.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-	<link rel="stylesheet" href="stupidCrap.css">
-	<script type="text/javascript" src="stupidCrap.js"></script>
-	<title>Stupid Website</title>
+	<link rel="stylesheet" href="SA.css">
+	<script type="text/javascript" src="SA.js"></script>
+	<title>Studious Adventure | Ongoing Educational Project</title>
 </head>
 <body>
-	<h1>This website is stupid</h1>
-	<p>Some crappy text. Nothing important here at all.</p>
+	<h1>H1 Heading - No Content</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </body>
 </html>
